src/test/ui/issues/issue-28324.stderr
error[E0658]: dereferencing raw pointers in statics is unstable
  --> $DIR/issue-28324.rs:7:24
   |
LL | pub static BAZ: u32 = *&error_message_count;
   |                        ^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51911
   = help: add `#![feature(const_raw_ptr_deref)]` to the crate attributes to enable

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/issue-28324.rs:7:24
   |
LL | pub static BAZ: u32 = *&error_message_count;
   |                        ^^^^^^^^^^^^^^^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be NULL, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0133, E0658.
For more information about an error, try `rustc --explain E0133`.
